--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <a href="registration.html">Регистрация</a><br>
     <a href="catalog.html">Каталог</a>
     <h1 id="top">Мой первый сайт</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <a href="https://www.artlebedev.ru/typograf/">Типограф</a></p>
