Задание 10  (исправлено задание 9)

--- a/HTMLpractice/Task10.html
+++ b/HTMLpractice/Task10.html
@@ -8,6 +8,8 @@
                 <b>Расписание</b>
             </font><br>
             <font size="6"><i> занятий на вторник</i></font>
+            <br><br>
+            <img src="https://i.pinimg.com/736x/3e/95/8e/3e958e0cf92d542f07d931514ba15e4f.jpg" alt="часы" width="150" height="150">
         </p>
     </body>
 </html>
