--- a/UsingGraphicsInHTML/Task8.html
+++ b/UsingGraphicsInHTML/Task8.html
@@ -28,7 +28,7 @@
         <marquee behavior="alternate" direction="left"><img src="https://static.vecteezy.com/system/resources/previews/054/952/130/non_2x/a-simple-aluminum-can-isolated-with-water-drops-showcasing-a-sleek-design-and-refreshing-essence-aluminum-can-without-label-with-water-drops-isolated-onisolated-on-transparent-background-free-png.png" alt="jar" width="100" ></marquee>
         <p>Использую возможности HTML-языка можно заставить банку летать по странице. </p>
         <p>И не только банку...</p>
-        <marquee behavior="alternate" direction="right"><img src="https://static.vecteezy.com/system/resources/previews/054/798/864/non_2x/fresh-red-apple-without-seeds-on-a-transparent-background-with-green-leaf-detail-apple-fruit-without-seed-isolated-on-transparent-background-free-png.png" alt="apple" width="100"></marquee>
+        <marquee behavior="alternate" direction="up" height="200"><img src="https://static.vecteezy.com/system/resources/previews/054/798/864/non_2x/fresh-red-apple-without-seeds-on-a-transparent-background-with-green-leaf-detail-apple-fruit-without-seed-isolated-on-transparent-background-free-png.png" alt="apple" width="100"></marquee>
     </div>
 </body>
 </html>
