--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <li><a href="./HTMLpractice/A_MAIN_MENU.html">HTML-практика</a></li>
         <li><a href="./TextFormating/HomeWorkNav/html">Форматирование текста</a></li>
         <li><a href="./UsingGraphicsInHTML/Navigation.html">Использование графики в HTML</a></li>
-        
+        <li><a href="MakingTablesInHTML.html">Создание таблиц в HTML</a></li>
     </ul>
 </body>
 </html>
