--- a/index.html
+++ b/index.html
@@ -4,54 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>выбор задания</title>
-    <style>
-        * {
-            font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-            text-align: center;
-            list-style-type: none;
-            color: white;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-        }
-
-        body {
-            background-image: url(https://i.pinimg.com/736x/ea/2c/f6/ea2cf6975ca4178d53a27b72c301f7b2.jpg);
-            background-size: cover;
-        }
-
-        @keyframes float {
-            0% {
-                transform: translateY(0);
-            }
-
-            50% {
-                transform: translateY(-7px);
-            }
-
-            100% {
-                transform: translateY(0);
-            }
-        }
-
-        h1 {
-            animation: float 3s ease-in-out infinite;
-        }
-
-        a:hover {
-            color: #00fbff; 
-            text-decoration: underline; 
-        }
-
-        a {
-            color: white;
-            text-decoration: none;
-            font-size: 18px;
-            transition: color 0.3s ease, text-decoration 0.3s ease;
-        }
-
-        .choise {
-            animation: float 3s ease-out infinite;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Домашние задания</h1>
