main site update

--- a/index.html
+++ b/index.html
@@ -7,14 +7,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Домашние задания</h1>
-    <span>(выполнил: Комлев Владислав)</span>
+    <a class="catalog" href="./catalog.html">Каталог</a>
+    <a class="register" href="./lesson3/registration.html">Регистрация</a>
+    <h1 class="head">Мой первый сайт</h1>
+    <hr>
+    <span class="sign-1">(создал: Комлев Владислав)</span>
     <p class="choise"><b><i>Выбор домашнего задания:</i></b></p>
     <ul>
         <li><a href="./HTMLpractice/A_MAIN_MENU.html">HTML-практика</a></li>
-        <li><a href="./TextFormating/HomeWorkNav/html">Форматирование текста</a></li>
+        <li><a href="./TextFormating/HomeWorkNav.html">Форматирование текста</a></li>
         <li><a href="./UsingGraphicsInHTML/Navigation.html">Использование графики в HTML</a></li>
-        <li><a href="MakingTablesInHTML.html">Создание таблиц в HTML</a></li>
+        <li><a href="./MakingTablesInHTML.html">Создание таблиц в HTML</a></li>
     </ul>
 </body>
 </html>
