добавлено домашнее задание по гиперссылкам

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <li><a href="./TextFormating/HomeWorkNav.html">Форматирование текста</a></li>
         <li><a href="./UsingGraphicsInHTML/Navigation.html">Использование графики в HTML</a></li>
         <li><a href="./MakingTablesInHTML.html">Создание таблиц в HTML</a></li>
+        <li><a href="./HyperLinks/Hyperlinks.html">Гиперссылки</a></li>
     </ul>
 </body>
 </html>
