--- a/index.html
+++ b/index.html
@@ -39,15 +39,8 @@
 
     <h1 align="center">Сайт студента, изучающего HTML & CSS</h1>
     <ul>
-        <li><a href="#" class="btn">Регистрация</a></li>
+        <li><a href="./lesson3/registration.html" class="btn">Регистрация</a></li>
         <li><a href="#" class="sign-in">Вход</a></li>
     </ul>
-
-    <!-- href="./HTMLpractice/A_MAIN_MENU.html">HTML-практика</a></li>
-        <li><a href="./TextFormating/HomeWorkNav.html">Форматирование текста</a></li>
-        <li><a href="./UsingGraphicsInHTML/Navigation.html">Использование графики в HTML</a></li>
-        <li><a href="./MakingTablesInHTML.html">Создание таблиц в HTML</a></li>
-        <li><a href="./HyperLinks/Hyperlinks.html">Гиперссылки</a></li>-->
-
 </body>
 </html>
