--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                         <li><a href="./MakingTablesInHTML.html">Таблицы</a></li>
                         <li><a href="./HyperLinks/Hyperlinks.html">Гиперссылки</a></li>
                         <li><a href="./forms/forms.html">Формы в HTML</a></li>
+                        <li><a href="./positioning/choosing.html">Позиционирование</a></li>
                     </ul>
                 </li>
                 <li><a href="#">Информация <i class="fas fa-arrow-circle-down"></i></a>
