--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                         <a href="./HyperLinks/Hyperlinks.html">Гиперссылки</a>
                         <a href="./forms/forms.html">Формы в HTML</a>
                         <a href="./positioning/choosing.html">Позиционирование</a>
+                        <a href="./CSSinHTMLdocuments/selection.html">CSS в HTML</a>
                     </div>
                      <div class="dropdown-mobile">
                         <a href="./HTMLpractice/A_MAIN_MENU.html">Практика</a>
@@ -34,6 +35,7 @@
                         <a href="./HyperLinks/Hyperlinks.html">Гиперссылки</a>
                         <a href="./forms/forms.html">Формы в HTML</a>
                         <a href="./positioning/choosing.html">Позиционирование</a>
+                        <a href="./CSSinHTMLdocuments/selection.html">CSS в HTML</a>
                      </div>
                 </li>
                 <li><a href="#">О создателе</a></li>
