еще некоторые задания сделаны

--- a/CSSinHTMLdocuments/tasks/task4.html
+++ b/CSSinHTMLdocuments/tasks/task4.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="./1.css">
 </head>
 <body>
-    <h1>Файл с именем 1.css успешно подключен!</h1>
+    <h1 class="task4-head">Файл с именем 1.css успешно подключен!</h1>
 </body>
 </html>
