--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                         <a href="./forms/forms.html">Формы в HTML</a>
                         <a href="./positioning/choosing.html">Позиционирование</a>
                         <a href="./CSSinHTMLdocuments/selection.html">CSS в HTML</a>
+                        <a href="./zhukov/main.html">Д/З на 12.05.2025</a>
                     </div>
                      <div class="dropdown-mobile">
                         <a href="./HTMLpractice/A_MAIN_MENU.html">Практика</a>
@@ -36,6 +37,7 @@
                         <a href="./forms/forms.html">Формы в HTML</a>
                         <a href="./positioning/choosing.html">Позиционирование</a>
                         <a href="./CSSinHTMLdocuments/selection.html">CSS в HTML</a>
+                        <a href="./zhukov/main.html">Д/З на 12.05.2025</a>
                      </div>
                 </li>
                 <li><a href="#">О создателе</a></li>
