добавлено задание по препроцессору sass

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                         <a href="./positioning/choosing.html">Позиционирование</a>
                         <a href="./CSSinHTMLdocuments/selection.html">CSS в HTML</a>
                         <a href="./zhukov/main.html">Д/З на 12.05.2025</a>
+                        <a href="./sass_practice/index.html">SASS-практика</a>
                     </div>
                      <div class="dropdown-mobile">
                         <a href="./HTMLpractice/A_MAIN_MENU.html">Практика</a>
@@ -80,3 +81,4 @@
     </script>
 </body>
 </html>
+
