--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                         <a href="./positioning/choosing.html">Позиционирование</a>
                         <a href="./CSSinHTMLdocuments/selection.html">CSS в HTML</a>
                         <a href="./zhukov/main.html">Д/З на 12.05.2025</a>
+                        <a href="./sass_practice/index.html">SASS-практика</a>
                      </div>
                 </li>
                 <li><a href="#">О создателе</a></li>
@@ -81,4 +82,5 @@
     </script>
 </body>
 </html>
+
 
