--- a/sass_practice/index.html
+++ b/sass_practice/index.html
@@ -20,7 +20,7 @@
         </nav>
     </div>
     <div class="product-box center">
-        <img src="image.webp" alt="product" class="product__img">
+        <img src="image.jpg" alt="product" class="product__img">
         <div class="product">
             <div class="product__content">
                 <a href="#" class="product__name">DARK BREAD</a>
@@ -31,7 +31,7 @@
         </div>
     </div>
     <div class="product-box center">
-        <img src="image.webp" alt="product" class="product__img">
+        <img src="image.jpg" alt="product" class="product__img">
         <div class="product">
             <div class="product__content">
                 <a href="#" class="product__name">DARK BREAD</a>
@@ -44,3 +44,4 @@
 </body>
 
 </html>
+
